Fix terminal UI alignment for boxes and tables.
Introduced UIUtils for visual width calculation, ensuring that wide
characters like emojis, symbols (♬, ★), and shades (░) are accounted
for during padding and centering. Refactored InteractiveShell and
RadioCommands to use these utilities for consistent and aligned
banners, help menus, and tables.

Co-authored-by: gokhantombul <14992334+gokhantombul@users.noreply.github.com>